partial completion of lab

--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,66 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+/* src/index.css */
+
+body {
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+}
+
+ul {
+  padding: 0;
+  display: flex;
+  list-style: none;
+}
+
+li {
+  margin-right: 16px;
+}
+
+.mail-box {
+  border: 2px solid white;
+  padding: 20px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+label,
+button {
+  margin: 16px 0px;
+  font-weight: bold;
+}
+
+input,
+select,
+textarea {
+  padding: 8px;
+}
+
+button {
+  background-color: #535bf2;
+}
+
+.links {
+  display: flex;
+  gap: 1rem; /* adds equal spacing between children */
+}
+
+select, button, input {
+  display: block;
+  width: 100%;
+}
+
+button {
+  color: white;
+}
